--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>agreste-lib-seed</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0-20170415</version>
     
     <packaging>jar</packaging>
 
@@ -57,13 +57,13 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.agapsys</groupId>
             <artifactId>agreste-test</artifactId>
-            <version>[0.1.0, 1.0.0)</version>
+            <version>[0.1.0-20170415, 1.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>com.agapsys</groupId>
             <artifactId>agreste-core</artifactId>
-            <version>[0.1.0, 1.0.0)</version>
+            <version>[0.1.0-20170415, 1.0.0)</version>
         </dependency>
         <dependency>
             <groupId>de.svenkubiak</groupId>
