--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.agapsys.example</groupId>
     <artifactId>agreste-lib-seed</artifactId>
-    <version>0.1.0-20170508</version>
+    <version>0.1.0-20170513</version>
     
     <packaging>jar</packaging>
 
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>com.agapsys</groupId>
             <artifactId>agreste-test</artifactId>
-            <version>[0.1.0-20170415, 1.0.0)</version>
+            <version>[0.1.0, 1.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>com.agapsys</groupId>
             <artifactId>agreste-core</artifactId>
-            <version>[0.1.0-20170508, 1.0.0)</version>
+            <version>[0.1.0, 1.0.0)</version>
         </dependency>
         <dependency>
             <groupId>de.svenkubiak</groupId>
